# integral_image

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yml
src/: CudaMat.cu  CudaMat.cuh  ParallelExecution.h  VisualizeBenchmark.ipynb  benchmark.py  cache_misses.py  cuda_version.cu  integral_image.h  main.cpp  parallel_version.cpp  serial_version.cpp  tests.cpp  torch_version.cpp
